styles.css
/* GNRL Styling */
/*import letter font*/
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');

* {
    margin: 0;
    padding: 0;
}

body {
    font-family: "Ubuntu", sans-serif;
}

html {
    scroll-behavior: smooth;
}

p{
    color: rgb(85, 85, 85)
}

/* Transition */
a,
.btn {
    transition: all 300ms ease;
}

/* Desktop Nav */
nav, 
.nav-links {
    display: flex;
}

nav {
    justify-content: space-around;
    align-items: center;
    height: 17vh;
}

.nav-links {
    gap: 2rem;
    list-style: none;
    font-size: 1.5rem;
}

a{
    color: black;
    text-decoration: none;
    text-decoration-color: white;
}

a:hover{ 
    color: grey;
    text-decoration: underline;
    text-underline-offset: 0.5rem;
    text-decoration-color: rgb(181, 181, 181);
}

.logo {
    font-size: 1.5rem;
}

.logo:hover {
    cursor: default;
}

/* Hamburger menu*/

#hamburger-nav {
    display: none;
}

.hamburger-menu {
    position: relative;
    display: inline-block;
}

.hamburger-icon {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 24px;
    width: 30px;
    cursor: pointer;
}

.hamburger-icon span {
    width: 100%;
    height: 2px;
    background-color: black;
    transition: all 0.3s ease-in-out;
}

.menu-links {
    position: absolute;
    top: 100%;
    right: 0;
    background-color: white;
    width: fit-content;
    max-height: 0;
    overflow: hidden;
    transition: all 0.3s ease-in-out;
}

.menu-links a {
    display: block;
    padding: 10px;
    text-align: center;
    font-size: 1.5rem;
    color: black;
    text-decoration: none;
    transition: all 0.3s ease-in-out;
}

.menu-links li {
    list-style: none;
}

.menu-links.open {
    max-height: 300px;
}

.hamburger-icon.open span:first-child {
    transform: rotate(45deg) translate(10px, 5px);
}

.hamburger-icon.open span:nth-child(2) {
    opacity: 0;
}

.hamburger-icon.open span:last-child {
    transform: rotate(-45deg) translate(10px, -5px);
}

.hamburger-icon span:first-child {
    transform: none;
}

.hamburger-icon span:nth-child(2) {
    opacity: 1; 
}

.hamburger-icon span:last-child {
    transform: none;
}

/* Sections */

section {
    padding-top: 4vh;
    padding-bottom: 4vh;
    /*
    height: 96vh;
    */
    margin: 7vh 10rem;
    box-sizing: border-box;
    min-height: fit-content;
}

.section-container {
    display: flex;
}

/* Profile Section */

#profile {
    display: flex;
    justify-content: center;
    gap: 5rem;
    /*
    height: 68vh;
    */
    margin-bottom: 0vh;
}

.section__pic-container {
    display: flex;
    height: 400px;
    width: 400px;
    margin: auto 0;
}

.hero-pic {
    border-radius: 50%;
}

.section__text {
    align-self: center;
    text-align: center;
}

.section__text p {
    font-weight: 600;
}

.section__text__p1 {
    text-align: center;
}

.section__text__p2 {
    font-size: 1.75rem;
    margin-bottom: 1rem;
}

.title {
    font-size: 3rem;
    text-align: center;
}

#socials-container {
    display: flex;
    justify-content: center;
    margin-top: 1rem;
    gap: 1rem;
}

/* Icons */

.icon {
    cursor: pointer;
    height: 2rem;
}

/* Buttons */

.btn-container {
    display: flex;
    justify-content: center;
    gap: 1rem;
}

.btn {
    font-weight: 600;
    transition: all 300ms ease;
    padding: 1rem;
    width: 8rem;
    border-radius: 2rem;
}

.btn-color-1, .btn-color-2 {
    border: rgb(53, 53, 53) 0.1rem solid;
}

.btn-color-1:hover, .btn-color-2:hover {
    cursor: pointer;
}
.btn-color-1, .btn-color-2:hover {
    background: rgb(53, 53, 53);
    color: white;
}

.btn-color-1:hover {
    background: rgb(0, 0, 0);
}

.btn-color-2 {
    background: none;
}

.btn-color-2:hover {
    border: rgb(255, 255, 255) 0.1rem solid;
}

.btn-container {
    gap: 1rem;
}

/* About Section */

#about {
    position: relative;
}

.about-containers {
    gap: 2rem;
    margin-bottom: 2rem;
    margin-top: 2rem;
}

.about-details-container {
    justify-content: center;
    flex-direction: column;
}

.about-containers, .about-details-container {
    display: flex;
}

.about-pic {
    border-radius: 2rem;
}

.arrow {
    position: absolute;
    right: -5rem;
    bottom: 2.5rem;
}

.details-container {
    padding: 1.5rem;
    flex: 1;
    background: white;
    border-radius: 2rem;
    border: rgb(53, 53, 53) 0.1rem solid;
    border-color: rgb(163, 163, 163);
    text-align: center;
}

.section-container {
    gap: 4rem;
    height: 80%;
}

.section__pic-container {
    height: 400px;
    width: 400px;
    margin: auto 0;
}

/* skills */

#skills {
    position: relative;
}

.skills-sub-title {
    color: rgb(85, 85, 85);
    font-weight: 600;
    font-size: 1.75rem;
    margin-bottom: 2rem;
}

.skills-details-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.article-container {
    display: flex;
    text-align: initial;
    flex-wrap: wrap;
    flex-direction: row;
    gap: 2.5rem;
    justify-content: space-around;
}

.skill-article {
    display: flex;
    width: 10rem;
    justify-content: left;
    gap: 0.5rem;
}

article .icon {
    cursor: default;
}

/* Experience */

#experience {
    position: relative;
}

.experience-jobs-container {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    justify-content: space-between;
}

.job-info-container {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    margin-top: 3px;
}

.job-name-position-details-container {
    width: 70%;
}

.job-name-position {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    gap: 1rem;
}

.job-place-date-container {
    width: 30%;
}

/* Projects Section*/

#projects {
    position: relative;
}

.color-container {
    border-color: rgb(163, 163, 163);
    background: rgb(255, 255, 255);
}

.project-img {
    border-radius: 2rem;
    width: 90%;
    height: 90%;
}

.project-tile {
    margin: 1rem;
    color: black;
}


.section-body {
    height: 85%;
}

.grid-container {
    display: grid;
    gap: 1rem;
    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
    align-content: start;
    justify-content: center;
}

.project-card {
    padding: 1.5rem;
    text-align: center;
    background: rgb(245, 245, 245);
    border-radius: 20px;
    border: rgb(163, 163, 163) 1px solid;
    
}

.project-img-container {
    height: 65%;
    width: 90%;
}

.project-img {
    border-radius: 2rem;
    height: 90%;
    width: 90%;
}

.project-btn-container {
    align-self: flex-end;
}

.project-btn {
    color: black;
    border-color: rgb(163, 163, 163);
}

/* Contact Section */

#contact {
    display: flex;
    justify-content: center;
    flex-direction: column;
    height: 70vh;
}

.contact-info-upper-container {
    display: flex;
    justify-content: center;
    border-radius: 2rem;
    border: rgb(53, 53, 53) 0.1rem solid;
    border-color: rgb(163, 163, 163);
    background: rgb(250, 250, 250);
    margin: 2rem auto;
    padding: 0.5rem;
}

.contact-info-container {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
    margin: 1rem;
}

.contact-info-container p {
    font-size: larger;
}

.contact-icon {
    cursor: default;
}

.email-icon {
    height: 2.5rem;
}

/* Footer section */

footer {
    height: 26vh;
    margin: 0 1rem;
}

footer p {
    text-align: center;
}

